<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <plurals name="hidden_apps_count">
        <item quantity="one">%1$d Hidden</item>
        <item quantity="other">%1$d Hidden</item>
    </plurals>
    <plurals name="tab_apps_count">
        <item quantity="one">%1$d App</item>
        <item quantity="other">%1$d Apps</item>
    </plurals>
    <string name="default_live_wallpaper" translatable="false">com.breel.wallpapers/com.breel.wallpapers.dioramas.lagos.LagosWallpaperService</string>
    <string name="app_releases_url" translatable="false">https://play.google.com/store/apps/details?id=amirz.rootless.nexuslauncher</string>
    <string name="app_donate_url" translatable="false">https://play.google.com/store/apps/details?id=amirz.donation</string>
    <string name="special_greeting" translatable="false">Hello Jane! Lots of love from the Lawnchair team.</string>
    <string name="action_open_notifications_class" translatable="false">ch.deletescape.lawnchair.gestures.handlers.NotificationsOpenGestureHandler</string>
    <string name="action_open_drawer_class" translatable="false">ch.deletescape.lawnchair.gestures.handlers.OpenDrawerGestureHandler</string>
    <string name="action_open_overview_class" translatable="false">ch.deletescape.lawnchair.gestures.handlers.OpenOverviewGestureHandler</string>
    <string name="action_do_nothing_class" translatable="false">ch.deletescape.lawnchair.gestures.BlankGestureHandler</string>
    <string name="default_owm_key" translatable="false">17a6438b1d63d5b05f7039e7cb52cde7</string>
    <string name="action_switch_apps_class" translatable="false">ch.deletescape.lawnchair.gestures.SwitchAppsGestureHandler</string>
    <string name="icu_abbrev_wday_month_day_no_year">EEEEMMMd</string>
    <string name="icu_abbrev_time">HH:mm</string>
    <string name="icu_abbrev_time_12h">hh:mm aa</string>
    <string name="icu_abbrev_date">dd MMMM</string>
    <string name="search_menu">Search</string>
    <string name="search_no_results">No Results</string>
    <string name="restart_lawnchair_pref_title">Restart</string>
    <string name="developer_options_title">Developer Options</string>
    <string name="change_default_home">Set as Home App</string>
    <string name="action_apply">Done</string>
    <string name="theme_dark_theme_mode_on">Enabled</string>
    <string name="theme_dark_theme_mode_off">Disabled</string>
    <string name="theme_title">Theme</string>
    <string name="pixel_ui_pref_summary">Icons, Colors, Blur</string>
    <string name="pref_icon_packs">Icon Packs</string>
    <string name="icon_pack_default">System Icons</string>
    <string name="pref_icon_pack_masking">Icon Masking</string>
    <string name="pref_icon_pack_masking_summary">Match unthemed icons to Icon Pack.</string>
    <string name="pref_legacy_treatment_title">Create Adaptive Icons</string>
    <string name="pref_legacy_treatment_summary">Create Adaptive Icons for all shortcuts.</string>
    <string name="pref_legacy_colored_backgrounds">Color Backgrounds</string>
    <string name="pref_legacy_colored_backgrounds_summary">Color generated Adaptive Icons&#x2019; backgrounds.</string>
    <string name="pref_white_only_treatment">Replace White Backgrounds</string>
    <string name="pref_white_only_treatment_summary">Color all Adaptive Icons&#x2019; backgrounds.</string>
    <string name="adaptify_pack_title">Create Adaptive Icons for Icon Pack</string>
    <string name="icon_shape_override_label">Icon Shape</string>
    <string name="reset_custom_icons">Remove Custom Icons</string>
    <string name="reset_custom_icons_confirmation">Revert to default icons from this Icon Pack? This can&#x2019;t be undone.</string>
    <string name="appearance">Appearance</string>
    <string name="theme_auto">Automatic (Matches Wallpaper)</string>
    <string name="theme_auto_night_mode">Set by System</string>
    <string name="theme_dark_theme_mode_follow_daylight">Scheduled (Dark at Night)</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark_text">Light w/ Dark Text</string>
    <string name="theme_with_dark_text">Dark Text</string>
    <string name="theme_use_black">Use Pure Black</string>
    <string name="theme_use_dark_text">Use Dark Text</string>
    <string name="lawnchair_accent">Accent Color</string>
    <string name="color_pixel_accent">Google Blue</string>
    <string name="color_system_accent">Set by System</string>
    <string name="color_wallpaper_main">Wallpaper &#x2014; Primary</string>
    <string name="color_wallpaper_secondary">Wallpaper &#x2014; Secondary</string>
    <string name="color_wallpaper_tertiary">Wallpaper &#x2014; Tertiary</string>
    <string name="pref_fonts_title">Fonts</string>
    <string name="blur_pref_title">Blur</string>
    <string name="blur_pref_summary">Blur page backgrounds.</string>
    <string name="blur_radius_pref_title">Blur Intensity</string>
    <string name="general_pref_title">Home Screen</string>
    <string name="general_pref_summary">Layout, Lock Home Screen, Transitions</string>
    <string name="grid_size">Icon Grid</string>
    <string name="grid_size_width">Width</string>
    <string name="grid_size_height">Height</string>
    <string name="num_hotseat_icons_pref_title">Icon Count</string>
    <string name="overlap_placement">Allow Overlaps</string>
    <string name="lock_desktop">Lock Home Screen</string>
    <string name="pref_category_icons">Shortcuts</string>
    <string name="hide_icon_labels_pref_title">Hide Labels</string>
    <string name="pref_mutliline_labels">Multiline Labels</string>
    <string name="icon_text_scale_pref_title">Text Size</string>
    <string name="text_color">Text Color</string>
    <string name="icon_scale_pref_title">Icon Size</string>
    <string name="auto_add_shortcuts_label">Add New Shortcuts to Home Screen</string>
    <string name="pref_icon_popup_menu">Shortcut Bubble</string>
    <string name="pref_category_misc">Other</string>
    <string name="animation_type_title">App Launch Transition</string>
    <string name="animation_type_default">Default</string>
    <string name="animation_type_pie">Android Pie</string>
    <string name="animation_type_pie_like">Android Pie (Emulated)</string>
    <string name="animation_type_reveal">Reveal</string>
    <string name="animation_type_slide_up">Slide Up</string>
    <string name="animation_type_scale_up">Scale Up</string>
    <string name="animation_type_blink">Blink</string>
    <string name="animation_type_fade">Fade</string>
    <string name="icon_badging_title">Notification Dots</string>
    <string name="pref_notification_count_title">Show Notification Count</string>
    <string name="allow_rotation_title">Enable Rotation</string>
    <string name="pref_center_wallpaper">Center Wallpaper</string>
    <string name="pref_center_wallpaper_summary">Disable wallpaper scrolling.</string>
    <string name="pref_hide_statusbar">Hide Status Bar</string>
    <string name="full_width_width_widgets_pref_title">Wide Widgets</string>
    <string name="full_width_widgets_pref_summary">Let widgets stretch to the screen&#x2019;s edges.</string>
    <string name="show_top_shadow_pref_title">Show Top Shadow</string>
    <string name="smartspace_preferences_in_settings">At a Glance</string>
    <string name="smartspace_preferences_in_settings_desc">Date &amp; Time, Data Sources</string>
    <string name="smartspace_time">Show Time</string>
    <string name="smartspace_date">Show Date</string>
    <string name="pref_smartspace_time_above">Show Large Clock</string>
    <string name="pref_hide_statusbar_clock">Hide Status Bar Clock</string>
    <string name="root_access_required">Root access required.</string>
    <string name="smartspace_time_24_h">Use 24-Hour Format</string>
    <string name="title_use_pill_qsb">Show Pill Search Shortcut</string>
    <string name="pref_category_weather">Other</string>
    <string name="pref_smartspace_widget_provider">Weather Source</string>
    <string name="google_app">Google App</string>
    <string name="weather_provider_disabled">Disabled</string>
    <string name="weather_provider_owm">OpenWeatherMap</string>
    <string name="weather_provider_pe">Pixel Experience</string>
    <string name="pref_weather_units">Temperature Unit</string>
    <string name="units_metric">Celsius</string>
    <string name="units_imperial">Fahrenheit</string>
    <string name="units_kelvin">Kelvin</string>
    <string name="units_rakine">Rankine</string>
    <string name="units_newton">Newton</string>
    <string name="units_delisle">Delisle</string>
    <string name="units_reaumur">R&#xE9;aumur</string>
    <string name="units_romer">R&#xF8;mer</string>
    <string name="pref_smartspace_event_providers">Data Sources</string>
    <string name="battery_status">Battery Status</string>
    <string name="event_provider_now_playing">Now Playing</string>
    <string name="event_provider_unread_notifications">Notifications</string>
    <string name="personality_provider">Greetings</string>
    <string name="pref_smartspace_event_provider">Event Source</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_full">Charged</string>
    <string name="battery_low">Battery Low</string>
    <string name="dock_pref_title">Dock</string>
    <string name="dock_pref_summary">Layout, Style, Indicators</string>
    <string name="radius">Corner Radius</string>
    <string name="app_drawer_pref_title">App Drawer</string>
    <string name="app_drawer_pref_summary">Layout, Categories, Suggestions</string>
    <string name="search">Search</string>
    <string name="search_pref_summary">Layout, Style, Search Engine</string>
    <string name="pref_integrations">Plugins</string>
    <string name="pref_integrations_summary">Sesame Shortcuts, Google Feed</string>
    <string name="gestures_pref_title">Gestures</string>
    <string name="gestures_pref_summary">Double Tap, Swipe up from Dock</string>
    <string name="gesture_double_tap">Double Tap</string>
    <string name="gesture_long_press">Touch &amp; Hold</string>
    <string name="gesture_press_home">Home Button Tap</string>
    <string name="gesture_press_back">Back Button Tap</string>
    <string name="gesture_swipe_down">Swipe Down</string>
    <string name="gesture_swipe_up">Swipe Up</string>
    <string name="gesture_dock_swipe_up">Swipe Up From Dock</string>
    <string name="backups">Back Up &amp; Restore</string>
    <string name="backup_pref_summary">Save Home Setup, Restore Backups</string>
    <string name="restore_backup">Restore</string>
    <string name="homescreen">Home Screen Layout</string>
    <string name="home_widget">At a Glance</string>
    <string name="backup_share">Share</string>
    <string name="theme_dark_theme_mode">Dark theme</string>
    <string name="delete">Delete</string>
    <string name="pref_fonts_global_font">Global Font</string>
    <string name="pref_fonts_home_icons">Labels</string>
    <string name="pref_fonts_home_smartspace">At a Glance</string>
    <string name="pref_fonts_home_shortcuts">Shortcut Bubbles</string>
    <string name="pref_fonts_category_drawer">App Drawer</string>
    <string name="pref_fonts_drawer_icons">Labels</string>
    <string name="pref_fonts_drawer_app_actions_icons">Actions</string>
    <string name="pref_fonts_drawer_tabs">Tab Names</string>
    <string name="quickstep_pref_title">Recents</string>
    <string name="quickstep_pref_summary">Gestures, Style, Navigation</string>
    <string name="swipe_up_to_switch_apps_title">Swipe up to Switch Apps</string>
    <string name="swipe_left_to_go_back_title">Swipe Left to Go Back</string>
    <string name="pref_category_nav_swipe_up_gestures">Swipe Up</string>
    <string name="gesture_nav_swipe_up_left">From Left</string>
    <string name="gesture_nav_swipe_up_center">From Center</string>
    <string name="gesture_nav_swipe_up_right">From Right</string>
</resources>