<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2021 Lawnchair Team.
  ~
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen android:title="Settings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:title="@string/theme_title"
        android:summary="@string/pixel_ui_pref_summary"
        android:icon="@drawable/ic_theme"
        android:key="theme"
        app:content="@xml/lawnchair_theme_preferences"
        android:layout="@layout/home_preference" />

    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:icon="@drawable/ic_pref_desktop"
        android:summary="@string/general_pref_summary"
        android:title="@string/general_pref_title"
        android:key="desktop"
        app:content="@xml/lawnchair_desktop_preferences"
        android:layout="@layout/home_preference" />

    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:icon="@drawable/ic_smartspace"
        android:summary="@string/smartspace_preferences_in_settings_desc"
        android:title="@string/home_widget"
        android:key="smartspace"
        app:content="@xml/lawnchair_smartspace_preferences"
        app:hasPreview="true"
        android:layout="@layout/home_preference"/>

    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:icon="@drawable/ic_dock"
        android:summary="@string/dock_pref_summary"
        android:title="@string/dock_pref_title"
        android:key="dock"
        app:content="@xml/lawnchair_dock_preferences"
        android:layout="@layout/home_preference" />

    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:icon="@drawable/ic_app_drawer"
        android:summary="@string/app_drawer_pref_summary"
        android:title="@string/app_drawer_pref_title"
        android:key="drawer"
        app:content="@xml/lawnchair_app_drawer_preferences"
        android:layout="@layout/home_preference" />


    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:icon="@drawable/ic_pref_search"
        android:summary="@string/search_pref_summary"
        android:title="@string/search"
        android:key="search"
        app:content="@xml/lawnchair_search_preferences"
        android:layout="@layout/home_preference" />

    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:icon="@drawable/ic_integrations"
        android:summary="@string/pref_integrations_summary"
        android:title="@string/pref_integrations"
        android:key="integrations"
        app:content="@xml/lawnchair_integration_preferences"
        android:layout="@layout/home_preference" />

    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:icon="@drawable/ic_gestures"
        android:summary="@string/gestures_pref_summary"
        android:title="@string/gestures_pref_title"
        android:key="gestures"
        app:content="@xml/lawnchair_gesture_preferences"
        android:layout="@layout/home_preference" />

    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:key="quickstep"
        android:summary="@string/quickstep_pref_summary"
        android:title="@string/quickstep_pref_title"
        android:icon="@drawable/ic_pref_lawnstep"
        app:content="@xml/lawnchair_quickstep_preferences"
        app:controllerClass=".LawnstepController"
        android:layout="@layout/home_preference" />

    <ch.deletescape.lawnchair.preferences.StyledIconPreference
        android:key="backups"
        android:title="@string/backups"
        android:summary="@string/backup_pref_summary"
        android:icon="@drawable/ic_import_export"
        android:layout="@layout/home_preference">

        <!--suppress AndroidDomInspection (Injected at compile time) -->
        <intent
            android:targetPackage="@string/application_id"
            android:targetClass="ch.deletescape.lawnchair.backup.BackupListActivity"/>
    </ch.deletescape.lawnchair.preferences.StyledIconPreference>

    <ch.deletescape.lawnchair.settings.ui.SubPreference
        android:key="developerOptions"
        android:icon="@drawable/ic_settings_development"
        android:title="@string/developer_options_title"
        app:content="@xml/lawnchair_dev_options_preference"
        app:controllerClass=".DeveloperOptionsController"
        android:layout="@layout/home_preference" />
</androidx.preference.PreferenceScreen>