<?xml version="1.0" encoding="utf-8"?>


<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ch.deletescape.lawnchair.font.settingsui.GlobalFontPreference
        android:key="pref_font_global"
        android:icon="@drawable/ic_global_font"
        android:title="@string/pref_fonts_global_font" />

    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:title="@string/homescreen"
        android:layout="@layout/settings_category_v2"
        android:dependency="pref_font_global">

        <ch.deletescape.lawnchair.font.settingsui.FontPreference
            android:key="pref_font_workspace"
            android:icon="@android:color/transparent"
            android:title="@string/pref_fonts_home_icons" />

        <ch.deletescape.lawnchair.font.settingsui.FontPreference
            android:key="pref_font_smartspaceText"
            android:icon="@android:color/transparent"
            android:title="@string/pref_fonts_home_smartspace" />

        <ch.deletescape.lawnchair.font.settingsui.FontPreference
            android:key="pref_font_deepShortcut"
            android:icon="@android:color/transparent"
            android:title="@string/pref_fonts_home_shortcuts" />
    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>

    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:title="@string/pref_fonts_category_drawer"
        android:layout="@layout/settings_category_v2"
        android:dependency="pref_font_global">

        <ch.deletescape.lawnchair.font.settingsui.FontPreference
            android:key="pref_font_allApps"
            android:icon="@android:color/transparent"
            android:title="@string/pref_fonts_drawer_icons" />

        <ch.deletescape.lawnchair.font.settingsui.FontPreference
            android:key="pref_font_drawerAppActions"
            android:icon="@android:color/transparent"
            android:title="@string/pref_fonts_drawer_app_actions_icons"
            app:controllerClass=".ActionSuggestionsFontController" />

        <ch.deletescape.lawnchair.font.settingsui.FontPreference
            android:key="pref_font_drawerTab"
            android:icon="@android:color/transparent"
            android:title="@string/pref_fonts_drawer_tabs" />
    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>
</androidx.preference.PreferenceScreen>
