<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2021 Lawnchair Team.
  ~
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ch.deletescape.lawnchair.gestures.ui.GesturePreference
        android:defaultValue="@string/action_do_nothing_class"
        android:key="pref_gesture_double_tap"
        android:persistent="true"
        android:title="@string/gesture_double_tap"
        app:gestureClass="ch.deletescape.lawnchair.gestures.gestures.DoubleTapGesture"/>

    <ch.deletescape.lawnchair.gestures.ui.GesturePreference
        android:defaultValue="@string/action_open_overview_class"
        android:key="pref_gesture_long_press"
        android:persistent="true"
        android:title="@string/gesture_long_press"
        app:gestureClass="ch.deletescape.lawnchair.gestures.gestures.LongPressGesture"/>

    <ch.deletescape.lawnchair.gestures.ui.GesturePreference
        android:defaultValue="@string/action_do_nothing_class"
        android:key="pref_gesture_press_home"
        android:persistent="true"
        android:title="@string/gesture_press_home"
        app:gestureClass="ch.deletescape.lawnchair.gestures.gestures.PressHomeGesture"/>

    <ch.deletescape.lawnchair.gestures.ui.GesturePreference
        android:defaultValue="@string/action_do_nothing_class"
        android:key="pref_gesture_press_back"
        android:persistent="true"
        android:title="@string/gesture_press_back"
        app:gestureClass="ch.deletescape.lawnchair.gestures.gestures.PressBackGesture"/>

    <ch.deletescape.lawnchair.gestures.ui.GesturePreference
        android:defaultValue="@string/action_open_notifications_class"
        android:key="pref_gesture_swipe_down"
        android:persistent="true"
        android:title="@string/gesture_swipe_down"
        app:gestureClass="ch.deletescape.lawnchair.gestures.gestures.VerticalSwipeGesture"/>

    <ch.deletescape.lawnchair.gestures.ui.GesturePreference
        android:defaultValue="@string/action_open_drawer_class"
        android:key="pref_gesture_swipe_up"
        android:persistent="true"
        android:title="@string/gesture_swipe_up"
        app:gestureClass="ch.deletescape.lawnchair.gestures.gestures.VerticalSwipeGesture"/>

    <ch.deletescape.lawnchair.gestures.ui.GesturePreference
        android:defaultValue="@string/action_open_drawer_class"
        android:key="pref_gesture_dock_swipe_up"
        android:persistent="true"
        android:title="@string/gesture_dock_swipe_up"
        app:gestureClass="ch.deletescape.lawnchair.gestures.gestures.VerticalSwipeGesture"/>
</androidx.preference.PreferenceScreen>