<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2021 Lawnchair Team.
  ~
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

    <ch.deletescape.lawnchair.preferences.SwipeUpSwitchPreference
        android:defaultValue="true"
        android:key="pref_swipe_up_to_switch_apps_enabled"
        android:persistent="true"
        android:title="@string/swipe_up_to_switch_apps_title" />

    <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
        android:defaultValue="false"
        android:key="pref_swipe_left_to_go_back"
        android:persistent="true"
        android:title="@string/swipe_left_to_go_back_title" />

    <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
        android:defaultValue="true"
        android:key="pref_recents_blur_background"
        android:persistent="true"
        android:title="Blur background" /> <!-- TODO Move this to blur pref with toggles for other sections -->

    <ch.deletescape.lawnchair.preferences.SeekbarPreference
        android:key="pref_recents_radius"
        android:title="@string/radius"
        app:minValue="0"
        app:maxValue="60"
        app:steps="60"
        app:summaryFormat="%.0fdp"
        app:summaryMultiplier="1"
        app:defaultSeekbarValue="2"
        android:persistent="true"/>

    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:title="@string/pref_category_nav_swipe_up_gestures">

        <ch.deletescape.lawnchair.gestures.ui.GesturePreference
            android:defaultValue="@string/action_switch_apps_class"
            android:key="pref_gesture_nav_swipe_up_left"
            android:persistent="true"
            android:title="@string/gesture_nav_swipe_up_left"
            android:dependency="pref_swipe_up_to_switch_apps_enabled"
            app:gestureClass="ch.deletescape.lawnchair.gestures.NavSwipeUpGesture"/>

        <ch.deletescape.lawnchair.gestures.ui.GesturePreference
            android:defaultValue="@string/action_switch_apps_class"
            android:key="pref_gesture_nav_swipe_up_center"
            android:persistent="true"
            android:title="@string/gesture_nav_swipe_up_center"
            android:dependency="pref_swipe_up_to_switch_apps_enabled"
            app:gestureClass="ch.deletescape.lawnchair.gestures.NavSwipeUpGesture"/>

        <ch.deletescape.lawnchair.gestures.ui.GesturePreference
            android:defaultValue="@string/action_switch_apps_class"
            android:key="pref_gesture_nav_swipe_up_right"
            android:persistent="true"
            android:title="@string/gesture_nav_swipe_up_right"
            android:dependency="pref_swipe_up_to_switch_apps_enabled"
            app:gestureClass="ch.deletescape.lawnchair.gestures.NavSwipeUpGesture"/>
    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>
</androidx.preference.PreferenceScreen>
