<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2021 Lawnchair Team.
  ~
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ch.deletescape.lawnchair.theme.ui.ThemeDarkModeListPreference
        android:key="pref_dark_theme_mode"
        android:title="@string/theme_dark_theme_mode"
        android:summary="%s" />

    <ch.deletescape.lawnchair.theme.ui.ThemeBlackSwitchPreference
        android:title="@string/theme_use_black"
        app:switchFlag="8" />

    <ch.deletescape.lawnchair.theme.ui.ThemeFlagSwitchPreference
        android:title="@string/theme_use_dark_text"
        app:switchFlag="2" />
</androidx.preference.PreferenceScreen>
