<!--
  ~     Copyright (C) 2021 Lawnchair Team.
  ~
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="28dp">

    <TextView
        android:id="@android:id/title"
        style="@style/TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        tools:text="Backup item" />

    <TextView
        android:id="@android:id/summary"
        style="@style/TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="16sp"
        tools:text="Oct 11, 2018 17:18:43" />

    <TextView
        android:id="@+id/action_restore_backup"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_restore"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/restore_backup" />

    <View
        android:id="@+id/divider"
        android:background="?android:listDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/action_share_backup"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_share"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/backup_share" />

    <TextView
        android:id="@+id/action_remove_backup_from_list"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_list_remove"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/delete" />

</LinearLayout>